# MyturkishMusicAnalysis

./: LICENSE  MyMusicAnalyisturkish (1).ipynb  MyMusicturkishAnalyis.ipynb  README.md  pyproject.toml
MyMusicAnalysis/src/: My_module.py  datasummary.py  eda.py  inferencepart4.py
