[project]
name = "myturkishmusicanalysis"
authors = [
    {name = "sukumar chigurupati", email = "emmanuelsukumaras@gmail.com"},
]
maintainers = [
    {name = "Sukumar Chigurupati", email = "emmanuelsukumaras@gmail.com"},
]
description = "Data summary, Exploratory Data Analysis, and Inference for Turkish music."
readme = "README.md"
keywords = ["python", "summary", "EDA", "Inference", "Turkish music"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11.6"
dependencies = [
    "seaborn>=0.13.0",
    "pandas>=1.3.3, <3.0.0",
    "matplotlib>=3.4.3, <4.0.0",
    "numpy>=1.21.0, <2.0.0",
]
version = "0.1.0"

[metadata]
author = "sukumar chigurupati"
author_email = "emmanuelsukumaras@gmail.com"

[tool.setuptools.packages.find]
where = ["myturkishmusicanalysis"]
